# sdk-velix-rust

./: .gitignore  Cargo.toml  README.md  smoke_test.sh
examples/: smoke_test.rs
install-test/: test.sh
src/: client.rs  config.rs  error.rs  lib.rs  retry.rs
src/modules/: checkin.rs  context.rs  events.rs  lgpd.rs  me.rs  mod.rs  onboarding.rs  persons.rs  tenants.rs
tests/: checkin_test.rs  events_test.rs  lgpd_test.rs  me_test.rs  onboarding_test.rs  persons_test.rs  tenants_test.rs
