[package]
name = "velix-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK oficial do VELIX para Rust — controle de acesso biométrico"
license = "UNLICENSED"
repository = "https://bitbucket.org/brajola/velix-sdk-rust"
keywords = ["velix", "biometrics", "access-control", "facial-recognition"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
wiremock = "0.6"
